调整jvm和启动参数菜单